--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Elite Concrete Utah
+email: info@eliteconcreteutah.com
 phone: (801) 550-7495
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
