--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,16 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+
+# Sitemap Settings
+defaults:
+  -
+    scope:
+      path:            "docs/*.pdf"
+    values:
+      sitemap:         false
+    
 
 # Exclude from processing.
 # The following items will not be processed, by default.
