--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Elite Concrete Utah
-email: info@eliteconcreteutah.com
+email: eliteconcreteutah@gmail.com
 phone: (801) 550-7495
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
