--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Elite Concrete Utah
-email: eliteconcreteutah@gmail.com
-phone: (801) 550-7495
+email: alphaconcretecoatings@gmail.com
+phone: (385) 414-5750
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
